# flappybird

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Game/: Bird.cpp  Bird.h  ErrorType.h  GameObject.h  GameOver.cpp  GameOver.h  GameScene.cpp  GameScene.h  GameState.h  MainMenu.cpp  MainMenu.h  ObjectType.h  PauseMenu.cpp  PauseMenu.h  Pipe.cpp  Pipe.h  SceneManager.cpp  SceneManager.h  Settings.cpp  Settings.h
